# MPlus

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py  config.py  exceptions.py  main.py
backend/api/: __init__.py  accounts.py  chat.py  platforms.py  sessions.py  simulations.py  topics.py
backend/db/: __init__.py  crud.py  database.py
backend/prompts/: __init__.py  brainstorm_prompts.py
backend/services/: __init__.py  brainstorm.py  llm_service.py  model_factory.py  options_service.py  platform_loader.py  report_service.py  ripple_adapter.py  simulation_service.py  topic_extractor.py  web_search_service.py
backend/static/: index.html
backend/static/assets/: index-Bjxf4JSj.css  index-BomvEVth.js  index-Bti7HV2d.js  index-DnlC0f3g.css
backend/tools/: anspire_search.py
config/: app_options.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: Layout.tsx  Loading.tsx  MarkdownRenderer.tsx  Modal.tsx  ModelSelect.tsx  PlatformIcons.tsx  PlatformSelect.tsx  SimulationResultModal.tsx  TagInput.tsx  Toast.tsx
frontend/src/hooks/: useChat.ts
frontend/src/pages/: AccountsPage.tsx  BrainstormPage.tsx  HomePage.tsx  LoginPage.tsx  SettingsPage.tsx  SimulationPage.tsx  TopicsPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: appStore.ts  authStore.ts
scripts/: build.sh  init_db.py  start.sh
tui/: __init__.py  main.py
